// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Update statement generates statements: changes 1`] = `
Map {
  "Article" => Map {
    "update" => 4,
  },
  "ArticleTagModeration" => Map {
    "deletion" => 3,
  },
  "ArticleTag" => Map {
    "deletion" => 8,
  },
}
`;

exports[`Update statement generates statements: changes 2`] = `
Map {
  "Article" => Map {
    "update" => 2,
  },
  "ArticleTag" => Map {
    "creation" => 2,
  },
}
`;

exports[`Update statement generates statements: changes 3`] = `
Map {
  "ArticleTag" => Map {
    "creation" => 4,
  },
}
`;

exports[`Update statement generates statements: changes 4`] = `
Map {
  "Article" => Map {
    "update" => 2,
  },
  "ArticleTag" => Map {
    "deletion" => 6,
    "creation" => 20,
  },
  "Tag" => Map {
    "creation" => 10,
  },
}
`;

exports[`Update statement generates statements: changes 5`] = `Map {}`;

exports[`Update statement generates statements: result 1`] = `
[
  {
    "score": 0,
    "status": "deleted",
    "tags": [],
    "title": "My first published article",
  },
  {
    "score": 0,
    "status": "deleted",
    "tags": [],
    "title": "My second published article",
  },
  {
    "score": 0,
    "status": "deleted",
    "tags": [],
    "title": "My first published article in root category",
  },
  {
    "score": 0,
    "status": "deleted",
    "tags": [],
    "title": "My second published article in root category",
  },
]
`;

exports[`Update statement generates statements: result 2`] = `
[
  {
    "score": 1,
    "status": "published",
    "tags": [
      {
        "order": 0,
        "tag": {
          "title": "Fashion",
        },
      },
    ],
    "title": "My first draft article",
  },
  {
    "score": 1,
    "status": "published",
    "tags": [
      {
        "order": 0,
        "tag": {
          "title": "Fashion",
        },
      },
    ],
    "title": "My second draft article",
  },
]
`;

exports[`Update statement generates statements: result 3`] = `
[
  {
    "score": 1,
    "status": "published",
    "tags": [
      {
        "order": 0,
        "tag": {
          "title": "Fashion",
        },
      },
      {
        "order": 1,
        "tag": {
          "title": "High-tech",
        },
      },
      {
        "order": 2,
        "tag": {
          "title": "TV",
        },
      },
    ],
    "title": "My first draft article",
  },
  {
    "score": 1,
    "status": "published",
    "tags": [
      {
        "order": 0,
        "tag": {
          "title": "Fashion",
        },
      },
      {
        "order": 1,
        "tag": {
          "title": "High-tech",
        },
      },
      {
        "order": 2,
        "tag": {
          "title": "TV",
        },
      },
    ],
    "title": "My second draft article",
  },
]
`;

exports[`Update statement generates statements: result 4`] = `
[
  {
    "status": "published",
    "title": "My first draft article",
  },
  {
    "status": "published",
    "title": "My second draft article",
  },
]
`;

exports[`Update statement generates statements: result 5`] = `
[
  {
    "status": "published",
    "title": "My first draft article",
  },
  {
    "status": "published",
    "title": "My second draft article",
  },
]
`;
